# EEG-P300

./: README.md  pyproject.toml
eeg_p300/: config.py
eeg_p300/evaluation/: cross_subject.py  within_subject.py
eeg_p300/models/: cnn1.py  sepconv1d.py
eeg_p300/preprocessing/: preproc.py
eeg_p300/utils/: data_utils.py  metrics.py  visualization.py
notebooks/: CNN!.ipynb  EEGNet.ipynb  cross_sepconv1d.py  data_gen.py  model_CNN1.py  model_sepconv1d.py  models.ipynb  plot_aucs.py  preproc.py  sepconv1d.ipynb  utils.py  within_sepconv1d.py
notebooks/.ipynb_checkpoints/: models-checkpoint.ipynb
scripts/: prepare_data.py  train_model.py  visualize_results.py
tests/: test_preprocessing.py
